<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <TextView
        android:id="@+id/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/promptPlay"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/buttonLevel1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/level1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlay"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/buttonLevel2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/level2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLevel1"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_signOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLevel2"
        android:background="@drawable/button_rounded_border"
        android:onClick="signOut"/>

</androidx.constraintlayout.widget.ConstraintLayout>