<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/lightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <ImageView
            android:id="@+id/imageDrop1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_drag"
            app:srcCompat="@drawable/drag_drop_square"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <ImageView
            android:id="@+id/imageDrop2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_drag"
            app:srcCompat="@drawable/drag_drop_square"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <ImageView
            android:id="@+id/imageDrop3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_drag"
            app:srcCompat="@drawable/drag_drop_square"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <ImageView
            android:id="@+id/imageDrop4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_drag"
            app:srcCompat="@drawable/drag_drop_square"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@color/green"
                android:text="@string/gameGo"
                android:onClick="playGame"/>

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@color/lightRed"
                android:text="@string/gameReset"
                android:onClick="resetSequence"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageArrowRight"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_arrow"
            app:srcCompat="@drawable/arrow_right"
            tools:layout_editor_absoluteX="-32dp"
            tools:layout_editor_absoluteY="254dp"
            />

        <ImageView
            android:id="@+id/imageArrowUp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_arrow"
            app:srcCompat="@drawable/arrow_up"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <ImageView
            android:id="@+id/imageArrowLeft"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_arrow"
            app:srcCompat="@drawable/arrow_left"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <ImageView
            android:id="@+id/imageArrowDown"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:contentDescription="@string/image_arrow"
            app:srcCompat="@drawable/arrow_down"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="103dp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/gameExit"
            android:background="@color/colorAccent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="71dp"
            android:onClick="exitGame"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgRobot"
        android:layout_width="84dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/robot" />

</androidx.constraintlayout.widget.ConstraintLayout>